--- a/src/index.html
+++ b/src/index.html
@@ -1,112 +1,109 @@
 <!doctype html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8">
-    <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    >
+    <meta name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HTML Form</title>
     <link rel="stylesheet" href="./style.css">
   </head>
 
   <body>
-    <form
-    action="https://mate-academy-form-lesson.herokuapp.com/create-application"
-    method="post"
-    >
+    <form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="post">
 
-      <fieldset>
+      <fieldset class="set">
         <legend>Personal information</legend>
 
         <label class="form-field">
-            Surname:
+          Surname:
           <input
             type="text"
             autocomplete="off"
             name="surname"
             required
-            >
+          >
         </label>
 
         <label class="form-field">
-            Name:
+          Name:
           <input
             type="text"
             autocomplete="off"
             name="name"
             required
-            >
+          >
         </label>
 
         <label class="form-field">
-            How old are You?
+          How old are You?
           <input
             type="number"
             name="age"
             value="12"
             min="1"
             max="100"
-            >
+          >
         </label>
 
         <label class="form-field">
-            Full date of birth:
+          Full date of birth:
           <input
             type="date"
             name="dateOfBirth"
-            >
+          >
         </label>
 
         <label class="form-field last">
-            I accept the term of the agreement
+          I accept the term of the agreement
           <input
             type="checkbox"
             name="terms"
-            >
+          >
         </label>
 
       </fieldset>
 
 
-      <fieldset>
+      <fieldset class="set">
         <legend>Registration</legend>
 
         <label class="form-field">
-            E-mail:
+          E-mail:
           <input
             type="email"
             name="emailInput"
             placeholder="email@example.com"
-            >
+          >
         </label>
 
         <label class="form-field last">
-            Password:
+          Password:
           <input
             type="password"
             name="passwordInput"
             minlength="5"
-            maxlength="20">
+            maxlength="20"
+          >
         </label>
 
       </fieldset>
 
 
-      <fieldset>
+      <fieldset class="set">
         <legend>An interesting fact about you!</legend>
 
         <div class="form-field">
-            Do you love cats?
+          Do you love cats?
 
           <label>
             <input
               type="radio"
               name="answer"
               value="yes"
-              >
-              Yes
+            >
+            Yes
           </label>
 
           <label>
@@ -114,59 +111,59 @@
               type="radio"
               name="answer"
               value="no"
-              >
-              No
+            >
+            No
           </label>
         </div>
 
         <label class="form-field">
-              What is your favorite color?
+          What is your favorite color?
           <input
-              type="color"
-              name="colorInput"
-              >
+            type="color"
+            name="colorInput"
+          >
         </label>
 
         <label class="form-field">
-              What time do you go to bed?
+          What time do you go to bed?
           <input
-              type="time"
-              step="1"
-              name="bedTime"
-              >
+            type="time"
+            step="1"
+            name="bedTime"
+          >
         </label>
 
         <label class="form-field">
-              What are your favorite brand of cars?
+          What are your favorite brand of cars?
           <select name="favColor" multiple>
-            <option>BMW</option>
-            <option>Audi</option>
-            <option>Lada</option>
+            <option value="BMW">BMW</option>
+            <option value="Audi">Audi</option>
+            <option value="Lada">Lada</option>
           </select>
         </label>
 
         <label class="form-field last">
-              How do you rate our work?
+          How do you rate our work?
           <input
-              type="range"
-              name="workRating"
-              value="0"
-              >
+            type="range"
+            name="workRating"
+            value="0"
+          >
         </label>
 
       </fieldset>
 
 
-      <fieldset>
+      <fieldset class="set">
         <legend>Additional info:</legend>
 
         <label class="form-field">
-            Comments:
+          Comments:
           <textarea name="comments"></textarea>
         </label>
 
         <label class="form-field last">
-            Would you recommend us?
+          Would you recommend us?
           <select name="recommend">
             <option value="yes">Yes</option>
             <option value="no">No</option>
