changed car brand values and removed some lines

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,6 @@
 
       <fieldset class="set">
         <legend>Personal information</legend>
-
         <label class="form-field">
           Surname:
           <input
@@ -62,13 +61,10 @@
             name="terms"
           >
         </label>
-
       </fieldset>
-
 
       <fieldset class="set">
         <legend>Registration</legend>
-
         <label class="form-field">
           E-mail:
           <input
@@ -87,16 +83,12 @@
             maxlength="20"
           >
         </label>
-
       </fieldset>
-
 
       <fieldset class="set">
         <legend>An interesting fact about you!</legend>
-
         <div class="form-field">
           Do you love cats?
-
           <label>
             <input
               type="radio"
@@ -136,9 +128,9 @@
         <label class="form-field">
           What are your favorite brand of cars?
           <select name="favColor" multiple>
-            <option value="BMW">BMW</option>
-            <option value="Audi">Audi</option>
-            <option value="Lada">Lada</option>
+            <option value="bmw">BMW</option>
+            <option value="audi">Audi</option>
+            <option value="lada">Lada</option>
           </select>
         </label>
 
@@ -150,13 +142,10 @@
             value="0"
           >
         </label>
-
       </fieldset>
-
 
       <fieldset class="set">
         <legend>Additional info:</legend>
-
         <label class="form-field">
           Comments:
           <textarea name="comments"></textarea>
@@ -169,11 +158,8 @@
             <option value="no">No</option>
           </select>
         </label>
-
       </fieldset>
-
       <button type="submit">Submit</button>
-
     </form>
     <script type="text/javascript" src="./main.js"></script>
   </body>
